--- a/main.ipynb
+++ b/main.ipynb
@@ -10436,11 +10436,7 @@
     "# horizontally\n",
     "# appel l descritazation ...\n",
     "def reduction_horiz(df_climat):\n",
-    "    for column in df_climat.columns:\n",
-    "        df_temp = df_climat[column].drop_duplicates()\n",
-    "        dropped = len(df_climat[column]) - len(df_temp)\n",
-    "        df_climat[column].drop_duplicates()\n",
-    "        print(f\"Number of dropped values in column {column}: {dropped}\")\n",
+    "    df_climat = df_climat.drop_duplicates()\n",
     "    return df_climat\n",
     "reduction_horiz(df_result)"
    ]
